# api-key-tools

./: .gitignore  README.md  app-preload.js  build.bat  config.json  logger.js  main.js  package-lock.json  package.json  server.js  test_keys.py  widget-preload.js
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-07-04-p2p-lan-sync.md  2026-07-04-serverless-sync.md
public/: app.css  app.js  index.html  style.css  widget-preview.html  widget.css  widget.html  widget.js
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/keystore/: debug.keystore
src-tauri/src/: config.rs  lib.rs  main.rs  models.rs  p2p.rs  state.rs  sync.rs
