[package]
name = "api-key-manager"
version = "1.1.0"
description = "API Key Manager - Manage API keys for any AI provider"
authors = ["Ricardowindoy"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "api_key_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rsa = { version = "0.9", features = ["sha2"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"

# P2P 局域网同步
tiny_http = "0.12"
qrcode = "0.14"
local-ip-address = "0.6"

# 桌面端独有：开机自启（移动端无此概念）
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
overflow-checks = false

[profile.dev]
strip = true
